<resources>
    <string name="app_name">心悦天气</string>


    <!--for text-->
    <string name="w_tmp">体感温度</string>
    <string name="w_sub">-°</string>
    <string name="w_degree">°</string>
    <string name="w_24h">24h预报</string>
    <string name="w_info">详细信息</string>
    <string name="w_subdegree">-°</string>
    <string name="w_hum">湿度</string>
    <string name="w_vis">能见度</string>
    <string name="w_rain">降雨量</string>
    <string name="w_air">空气质量</string>
    <string name="w_pm25">PM2.5[入肺颗粒物]</string>
    <string name="w_dousub">--</string>
    <string name="w_pm10">PM10[可吸入颗粒物]</string>
    <string name="w_so2">SO₂[二氧化硫]</string>
    <string name="w_no2">NO₂[二氧化氮]</string>
    <string name="w_sunandwind">太阳和风</string>
    <string name="w_lifeindex">生活指数</string>
    <string name="w_compre">综合</string>
    <string name="w_dress">穿衣</string>
    <string name="w_ray">紫外线</string>
    <string name="w_motion">运动</string>
    <string name="w_cold">感冒</string>
    <string name="w_tour">旅游</string>
    <string name="w_carwash">洗车</string>
    <string name="title">心悦天气</string>
    <string name="s_notice">消息通知</string>
    <string name="s_changebg">更换背景</string>
    <string name="s_cleardata">清理缓存</string>
    <string name="s_about">关于</string>
    <string name="s_feedback">反馈</string>

    <!--login-->
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码大于 6 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="info">个人信息</string>
    <string name="need_password">密码至少6位</string>
    <string name="password_error">前后两次密码不正确</string>
    <string name="s_account">账号管理</string>
    <string name="s_update">检查更新</string>
    <string name="version">当前版本:1.0.0</string>
    <string name="team">心悦天气项目组成员:</string>
    <string name="members">赵晨、周韬、常晓宁、刘彦华</string>
    <string name="notice_precipitation">降水提醒</string>
    <string name="notice_disaster">灾害预警</string>
    <string name="notice_friend">好友消息</string>
    <string name="notice_interactive">互动消息</string>
    <string name="change_input_name">请输入昵称</string>
    <string name="change_confirm">确认修改</string>
    <string name="change_old_psw">请输入原密码</string>
    <string name="change_new_psw">请输入新密码</string>
    <string name="change_new_psw2">请再次输入新密码</string>
    <string name="forget_input_num">请输入手机号</string>
    <string name="forget_input_psw">请输入密码</string>
    <string name="forget_input_psw2">请再次输入密码</string>
    <string name="forget_input_ver">请输入验证码</string>
    <string name="forget_get_ver">获取验证码</string>
    <string name="info_name">昵称</string>
    <string name="info_num">手机号</string>
    <string name="info_psw">密码</string>
    <string name="info_change">修改</string>
    <string name="info_exit">退出登录</string>
    <string name="login">登录</string>
    <string name="forget_psw">忘记密码</string>
    <string name="register">快速注册</string>
    <string name="reg">注册</string>

    <string name="network_invalid">无效的网络链接</string>
    <string name="phone_occupied">手机号码已被注册</string>
    <string name="password_wrong">用户名和密码不匹配</string>
    <string name="server_maintenance">服务器维护中</string>
    <string name="menu_care">特别关心</string>
    <string name="menu_add">添加城市</string>
    <string name="menu_now">此刻</string>
    <string name="menu_setting">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_about">关于</string>
    <string name="json_error">解析错误</string>
    <string name="exit">再次点击退出程序</string>
    <string name="send">发送</string>
    <string name="add_picture">添加图片</string>
    <string name="edit">编辑</string>
    <string name="message_show">今天的天气如何……</string>

    <array name="tab_title">
        <item>聊天</item>
        <item>添加</item>
    </array>

</resources>
