<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_nav_first"
    android:checkableBehavior="single">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_menu_care"
            android:icon="@mipmap/slide_focus"
            android:title="@string/menu_care" />

        <item
            android:id="@+id/nav_add_city"
            android:icon="@mipmap/slide_add"
            android:title="@string/menu_add" />

        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/slide_share"
            android:title="@string/menu_now" />

        <item
            android:id="@+id/nav_menu_setting"
            android:icon="@mipmap/slide_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@mipmap/slide_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/slide_about"
            android:title="@string/menu_about" />

    </group>

    <group android:id="@+id/nav_menu_title_two">

        <!--<item-->
        <!--android:id="@+id/nav_menu_setting"-->
        <!--android:icon="@mipmap/ic_settings"-->
        <!--android:title="设置" />-->
        <!--<item-->
        <!--android:icon="@mipmap/ic_help"-->
        <!--android:id="@+id/nav_menu_help"-->
        <!--android:title="帮助" />-->
    </group>

</menu>