<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xy_white_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <RelativeLayout
        android:id="@+id/s_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <ImageView
            style="@style/setting_item_i"
            android:src="@mipmap/account" />

        <TextView
            style="@style/setting_item_tv"
            android:text="@string/s_account" />

        <ImageView style="@style/setting_item_iv" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:id="@+id/s_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <ImageView
            style="@style/setting_item_i"
            android:src="@mipmap/message" />

        <TextView
            style="@style/setting_item_tv"
            android:text="@string/s_notice" />

        <ImageView style="@style/setting_item_iv" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:id="@+id/s_changebg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <ImageView
            style="@style/setting_item_i"
            android:src="@mipmap/background" />

        <TextView
            style="@style/setting_item_tv"
            android:text="@string/s_changebg" />

        <ImageView style="@style/setting_item_iv" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RelativeLayout
        android:id="@+id/s_cleardata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <ImageView
            style="@style/setting_item_i"
            android:src="@mipmap/clear" />

        <TextView
            style="@style/setting_item_tv"
            android:text="@string/s_cleardata" />

        <TextView
            android:id="@+id/s_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:paddingRight="@dimen/padding_medium"
            android:text="0KB"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

</LinearLayout>
