<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xy_white_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <TextView
            style="@style/setting_item_notice"
            android:text="@string/notice_precipitation" />

        <com.suke.widget.SwitchButton
            android:id="@+id/precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <TextView
            style="@style/setting_item_notice"
            android:text="@string/notice_disaster" />
        <com.suke.widget.SwitchButton
            android:id="@+id/disaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <TextView
            style="@style/setting_item_notice"
            android:text="@string/notice_friend" />
        <com.suke.widget.SwitchButton
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <TextView
            style="@style/setting_item_notice"
            android:text="@string/notice_interactive" />
        <com.suke.widget.SwitchButton
            android:id="@+id/interactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

</LinearLayout>