<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <View
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:background="@mipmap/password_gray" />


            <EditText
                android:id="@+id/change_old_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginStart="@dimen/padding_medium"
                android:background="@null"
                android:hint="@string/change_old_psw"
                android:inputType="phone|number"
                android:singleLine="true"
                android:textColor="@color/text_black_light"
                android:textColorHint="@color/choose_city_edit_text_color"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <View
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:background="@mipmap/password_gray" />

            <EditText
                android:id="@+id/change_first_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginStart="@dimen/padding_medium"
                android:background="@null"
                android:hint="@string/change_new_psw"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black_light"
                android:textColorHint="@color/choose_city_edit_text_color"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <View
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:background="@mipmap/password_gray" />

            <EditText
                android:id="@+id/change_second_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginStart="@dimen/padding_medium"
                android:background="@null"
                android:hint="@string/change_new_psw2"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black_light"
                android:textColorHint="@color/choose_city_edit_text_color"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>



    </LinearLayout>


    <Button
        android:id="@+id/change_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:background="@drawable/login_background_border"
        android:text="@string/change_confirm"
        android:textColor="@color/white_background"
        android:textSize="@dimen/text_size_large" />


</LinearLayout>

